# substrate-frontier-tutorial

./: .gitignore  Cargo.toml  README.md
node/src/: chain_spec.rs
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
pallets/template/: Cargo.toml
precompiles/collectibles/: Cargo.toml
precompiles/collectibles/src/: lib.rs
precompiles/utils/macro/: Cargo.toml
precompiles/utils/src/: precompile_set.rs  substrate.rs  tests.rs
precompiles/utils/src/data/: xcm.rs
precompiles/utils/src/evm/: handle.rs
precompiles/utils/src/testing/: handle.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
tests/: collectibles.abi.json  collectibles.test.ts  jest.config.js  package-lock.json  package.json  test-collectibles.ts  utils.ts
tests/contracts/: collectibles.sol
