[package]
name = "pallet-evm-precompile-collectibles"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "collectibles precompiles for EVM pallet."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
frame-support = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

precompile-utils = { path = "../utils", default-features = false }
pallet-collectibles = { path = "../../pallets/collectibles", default-features = false }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"sp-std/std",
	"fp-evm/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"pallet-collectibles/std",
]
